--- a/hw2.ipynb
+++ b/hw2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,9 +17,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] 6437\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -121,14 +128,14 @@
     "    mutate(hhveh = recode(hhveh, `0`=0, `1`=1, `2`=2, `3`=3, `4`=3, `5`=3, \n",
     "                          `6`=3, `7`=3, `8`=3)) %>%\n",
     "    group_by(resty, hhveh) \n",
-    "\n",
+    "print(nrow(df.resveh))\n",
     "df.resveh.sum <- summarize(df.resveh, count=n(), avg_trips = mean(htrips))\n",
     "df.resveh.sum"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [
     {
@@ -245,6 +252,75 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 248,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] 0.07454329\n",
+      "[1] 0.07339133\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Manual Error calcs\n",
+    "df.resveh.fin <- merge(df.resveh, df.resveh.sum, by=c('resty', 'hhveh'))\n",
+    "df.resveh.fin$ResError <- (df.resveh.fin$htrips - \n",
+    "                           df.resveh.fin$avg_trips)^2\n",
+    "df.resveh.fin$TotError <- (df.resveh.fin$htrips - \n",
+    "                           mean(df.resveh.fin$htrips))^2\n",
+    "SSE <- sum(df.resveh.fin$ResError)\n",
+    "SST <- sum(df.resveh.fin$TotError)\n",
+    "R2 <- 1 - (SSE/SST)\n",
+    "print(R2)\n",
+    "k <- 9\n",
+    "n <- nrow(df.resveh.fin)\n",
+    "adj.R2 <- R2 - ((1 - R2)*(k - 1) / (n - k - 1))\n",
+    "print(adj.R2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 249,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "Call:\n",
+       "lm(formula = htrips ~ hhveh + resty, data = df.resveh)\n",
+       "\n",
+       "Residuals:\n",
+       "    Min      1Q  Median      3Q     Max \n",
+       "-12.250  -5.302  -1.527   3.611  68.750 \n",
+       "\n",
+       "Coefficients:\n",
+       "            Estimate Std. Error t value Pr(>|t|)    \n",
+       "(Intercept)   7.2789     0.3588  20.288  < 2e-16 ***\n",
+       "hhveh         1.8612     0.1231  15.115  < 2e-16 ***\n",
+       "resty        -0.6128     0.1310  -4.677 2.97e-06 ***\n",
+       "---\n",
+       "Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1\n",
+       "\n",
+       "Residual standard error: 7.597 on 6434 degrees of freedom\n",
+       "Multiple R-squared:  0.05688,\tAdjusted R-squared:  0.05659 \n",
+       "F-statistic:   194 on 2 and 6434 DF,  p-value: < 2.2e-16\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "ln.restyveh.all <- lm(htrips ~ hhveh + resty, data=df.resveh)\n",
+    "summary(ln.restyveh.all)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -253,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [
     {
