--- a/hw1.ipynb
+++ b/hw1.ipynb
@@ -1226,17 +1226,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 1,
    "metadata": {
     "scrolled": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ribus unweighted = 27.72522871763064 percent\n",
-      "ribus weighted = 28.599366847117246 percent\n"
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-67f83e1e3c78>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;31m# Load CSV\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m df = pd.read_csv(os.path.join(\n\u001b[0m\u001b[0;32m     11\u001b[0m     \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdirname\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"__file__\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m     \u001b[0mwd\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m'household.csv'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0musecols\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'resty'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'income'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'hhveh'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'pd' is not defined"
      ]
     }
    ],
@@ -1267,6 +1270,35 @@
     "# Output result\n",
     "print(\"ribus unweighted =\", ribus_pct, 'percent')\n",
     "print(\"ribus weighted =\", ribuswgt_pct, 'percent')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7499.5 19999.5 29999.5 42499.5 62499.5 87499.5 124999.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "print((14999-0)/2 + 0,\n",
+    "\n",
+    "(24999-15000)/2 + 15000,\n",
+    "\n",
+    "(34999-25000)/2 + 25000,\n",
+    "\n",
+    "(49999-35000)/2 + 35000,\n",
+    "\n",
+    "(74999-50000)/2 + 50000,\n",
+    "\n",
+    "(99999-75000)/2 + 75000,\n",
+    "\n",
+    "(149999-100000)/2 + 100000)"
    ]
   }
  ],
