--- a/hw2-finalist-hbw.ipynb
+++ b/hw2-finalist-hbw.ipynb
@@ -10,14 +10,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "library(dplyr)\n",
     "library(ggplot2)\n",
     "\n",
-    "df.hbw <- read.csv(paste(\"C:/Users/saavedrak/Desktop/\",\n",
+    "df.hbw <- read.csv(paste(\"C:/Users/kevin/Desktop/\",\n",
     "                     \"USP_587_data/HW2/household_hbw.csv\", sep=\"\"))"
    ]
   },
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +301,7 @@
     }
    ],
    "source": [
-    "# HHWork by Licensed Drivers\n",
+    "#  By HHwork, Licensed Drivers\n",
     "df.wrklic <- df.hbw %>%\n",
     "    select(hhlic, hhwrk, hbw) %>%\n",
     "    mutate(hhwrk = recode(hhwrk, `0`=0, `1`=1, `2`=2, `3`=3, `4`=3, `5`=3)) %>%\n",
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -373,12 +373,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##  AVG TRIPS by HH Size Presence of Non-workers"
+    "##  AVG TRIPS by HH Size and Presence of Non-workers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
     }
    ],
    "source": [
-    "# HH Size only\n",
+    "# HH Size and Presence of Non-workers\n",
     "df.nonwrk <- df.hbw %>%\n",
     "    select(hhsiz, hhwrk, hbw) %>%\n",
     "    mutate(nonwrk = ifelse(hhsiz > hhwrk, 1, 0)) %>%\n",
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -660,6 +660,7 @@
     }
    ],
    "source": [
+    "# HHwrk, hhveh\n",
     "df.persveh <- df.hbw %>%\n",
     "    select(hhwrk, hhveh, hbw) %>%\n",
     "    mutate(hhwrk = recode(hhwrk, `0`=0, `1`=1, `2`=2, `3`=3, `4`=3, `5`=3)) %>%\n",
@@ -695,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -881,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -925,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
