update all files.

--- a/HW3.ipynb
+++ b/HW3.ipynb
@@ -2,13 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "-- Attaching packages --------------------------------------- tidyverse 1.2.1 --\n",
+      "v ggplot2 2.2.1     v purrr   0.2.4\n",
+      "v tibble  1.4.1     v dplyr   0.7.4\n",
+      "v tidyr   0.7.2     v stringr 1.2.0\n",
+      "v readr   1.1.1     v forcats 0.2.0\n",
+      "-- Conflicts ------------------------------------------ tidyverse_conflicts() --\n",
+      "x dplyr::filter() masks stats::filter()\n",
+      "x dplyr::lag()    masks stats::lag()\n"
+     ]
+    }
+   ],
    "source": [
     "library(tidyverse)\n",
     "\n",
-    "wd <- \"/Users/kevin/Desktop/USP_587_data/HW3/\"\n",
+    "wd <- \"C:/Users/kevin/Desktop/USP_587_data/HW3/\"\n",
     "df.demog <- read.csv(paste(wd, \"hw3_demog.csv\", sep=\"\"))\n",
     "df.trips.inc <- read.csv(paste(wd, \"hw3_trip_rates.csv\", sep=\"\"))\n",
     "df.trips.hhsiz <- read.csv(paste(wd, \"hw3_trip_rates_hhsiz.csv\", sep=\"\"))\n",
